# BatchMkvMerge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  constants.rs  controller.rs  extract.rs  lib.rs  main.rs  merge.rs  mkvtoolnix.rs  protocol.rs
src-tauri/src/media_metadata/: deadline.rs  error.rs  ivf.rs  mod.rs  reader.rs
src-tauri/src/media_metadata/audio/: aac.rs  ac3.rs  dts.rs  flac.rs  id3v2.rs  mod.rs  mp3.rs  truehd.rs  tta.rs  wav.rs  wavpack.rs
src-tauri/src/media_metadata/avi/: avih.rs  identify.rs  mod.rs  mpeg4_par.rs  odml.rs  reader.rs  riff.rs  strl.rs  subtitles.rs
src-tauri/src/media_metadata/codec/: fourcc.rs  matroska_codec_ids.rs  mod.rs  mpegts_stream_types.rs
src-tauri/src/media_metadata/coreaudio/: caf.rs  mod.rs  reader.rs
src-tauri/src/media_metadata/elementary/: dirac.rs  dv.rs  mod.rs  mpeg_video.rs  obu.rs  vc1.rs
src-tauri/src/media_metadata/flv/: header.rs  mod.rs  reader.rs  script_data.rs  tag.rs
src-tauri/src/media_metadata/io/: bit_reader.rs  endian.rs  file_source.rs  mod.rs  varint.rs
src-tauri/src/media_metadata/language/: bcp47.rs  iso_639.rs  mod.rs
src-tauri/src/media_metadata/matroska/: attachments.rs  (+13 more)
src-tauri/tests/: audio_fixtures.rs  avi_fixtures.rs  elementary_fixtures.rs  matroska_fixtures.rs  mp4_fixtures.rs  mpegps_fixtures.rs  mpegts_fixtures.rs  ogg_fixtures.rs  protocol_typescript.rs  residual_fixtures.rs  subtitle_fixtures.rs
(+220 files in other folders)
