[package]
name = "BatchMkvMerge"
version = "0.1.0"
description = "A tool to batch merge media files to MKV files using mkvmerge."
authors = ["Sam Cao"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "batch_mkvmerge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
sys-locale = "0.3.2"
ureq = { version = "2", features = ["json"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-serde = "0.0.12"
specta-typescript = "0.0.12"
language-tags = "0.3"
encoding_rs = "0.8"
flate2 = "1"
quick-xml = "=0.39.2"
